--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="card">
-        <img class="border" src="/image/close-portrait-angry-tiger-260nw-2320794599.webp" alt="Angry Tiger" class="avatar">
-    <div class="border">
+        <img src="/image/close-portrait-angry-tiger-260nw-2320794599.webp" alt="Angry Tiger" class="avatar">
+    <div>
         <h3>Heather Flanders</h3>
         <p>Full Stack Developer</p>
         <h4>Tennessee, USA</h4>
